# Algorithms

./: .gitignore
ImageCompression/: CMakeLists.txt  PCA.java  PCAFileReader.java  PGMPrinter.java  PGMProcessor.java  PGMReader.java  Project.java  SVD.java  build.sh  main.cpp  readme.markdown
ImageCompression/DataSets/: 300 3D Points.txt  Mean SAT I Math (1990-2004).txt  Mean SAT I Math (1990-2014).txt  Mean SAT I Verbal (1990-2004).txt  PointGenerator.cpp  readme.txt  test.txt
ImageCompression/pca/: Math_Scores.txt  Verbal_Scores.txt
ImageCompression/pgm/: apollonian_gasket.ascii.pgm  casablanca.ascii.pgm  small.pgm
ImageCompression/pgm_svd/: baboon.ascii.pgm_header.txt  barbara.ascii.pgm_header.txt  brain_398.ascii.pgm_header.txt  casablanca.ascii.pgm_header.txt  coins.ascii.pgm.SVD  coins.ascii.pgm_header.txt  columns.ascii.pgm_header.txt  dragon.ascii.pgm_header.txt  gator.ascii.pgm_header.txt  mona_lisa.ascii.pgm.SVD  mona_lisa.ascii.pgm_header.txt  small.pgm.SVD  small.pgm_header.txt
WatchMan/: .intersection.cpp.swp  .intersection.hpp.swp  .main.cpp.swp  CMakeLists.txt  bfs.cpp  bfs.hpp  ffs.cpp  ffs.cpp~  ffs.hpp  generateTestCases.cpp  graph.cpp  graph.hpp  graph.hpp~  inputData.cpp  inputData.h  intersection.cpp  intersection.hpp  main.cpp  mymain.cpp  output.txt  parsing.cpp  parsing.hpp  points.hpp  rand_test_cases.py  readme.markdown  s.txt  ss.txt  ss.txt~  sss.txt  watchman.cpp  watchman.hpp  watchman.hpp~
WatchMan/Alternative Intersection Code/: intersection.cpp  intersection.hpp  readme.txt
WatchMan/museum/: all.txt  incorrect_problems  (+45 more)
(+30 files in other folders)
